# aoe2_matchup

./: .env.example  .gitignore  ADDING_CIVS.md  ARCHITECTURE.md  CLAUDE.md  DESIGN.md  DOCUMENTATION.md  Dockerfile  PLAN_db_architecture_redesign.md  README.md  SPRITE_PLAN.md  aoe2-data-project-plan.md  armenians_matchups.csv  army_simulator.py  combat_results.csv  combat_results_matchups.csv  combat_simulator.py  explore.py  export_reference_data.py  extract.py  extract_advanced.py  gemini.md  generate_database.py  generate_unit_csvs.py  pyproject.toml  railway.json  reference_data_export.md  requirements.txt  rpi-changes.md  seo.md
.golden/: baseline.json  capture_baseline.py
.railway/: config.json
analysis/: __init__.py  ability_registry.py  availability_resolver.py  combat_properties.py  compute_creation_ease.py  config.py  config_combat.py  config_constants.py  config_units.py  generate_main_db.py  generate_reference.py  unit_analyzer.py
aoe2x/: __init__.py  paths.py
apps/: README.md
database_creation/: High level requirements.md  combat_properties.py  config.py  extract_effects.py  extract_techs.py  extract_units.py  generate_main_db.py  generate_reference.py  unit_analyzer.py  unit_list.txt
docs/: DAT_EXTRACTION_RESTART.md  SIMULATION_REBUILD_GUIDE.md  WEBAPP_DATA_CONTRACT.md  adding-civs.md  architecture.md  design.md  flux2-unit-art-workflow.md  matchup-baseline.md  matchup_combos_analysis.md  patch-workflow.md  rpi-changes.md  stats-verification-report.md  unique_unit_verification_data.json
experiments/: analyze_castle_age_knight.py  (+3 more)
(+781 files in other folders)
