[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aoe2x"
version = "0.1.0"
description = "AoE2:DE data engine — patch-dependent extractors, golden-data generators, and the sim/advisor/ranking/replay algorithms behind aoe2matchup.com and the replay visualizer"
requires-python = ">=3.10"

# Runtime deps are intentionally empty: the library layers (sim, advisor,
# rank, batch) are stdlib-only so PyPy3 and the conda extraction env can run
# them uninstalled (`python -m aoe2x...` from the repo root). App-specific
# deps stay in each app's requirements.txt (apps/ after Stage 7).
dependencies = []

[tool.setuptools.packages.find]
include = ["aoe2x*"]

[tool.setuptools.package-data]
aoe2x = ["**/*.json", "**/*.csv", "**/*.proto"]
